--- a/client/index.html
+++ b/client/index.html
@@ -21,12 +21,12 @@
 		</div>
     <div class="example">
 			<h2>Example Usage:</h2>
-			<p>https://url-shortener-metasci.c9users.io/new/https://www.google.com</p><br>
-			<p>https://url-shortener-metasci.c9users.io/new/https//wwwng:om</p>
+			<p>https://metasci-url-shortener.herokuapp.com/new/https://www.google.com</p><br>
+			<p>https://metasci-url-shortener.herokuapp.com/new/https//wwwng:om</p>
 			<h2>Example Output:</h2>
-			<p>{"original_url": "https://www.google.com", "short_url": "https://url-shortener-metasci.c9users.io/6301"}</p>
+			<p>{"original_url": "https://www.google.com", "short_url": "https://metasci-url-shortener.herokuapp.com/6301"}</p>
 		  <h2>Example Usage:</h2>
-		  <p>https://url-shortener-metasci.c9users.io/6301</p>
+		  <p>https://metasci-url-shortener.herokuapp.com/6301</p>
 		  <h2>Redirects To:</h2>
 		  <p>https://www.google.com</p>
 		</div>
